--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/pom_sorter"]
-	path = src/pom_sorter
+	path = src/drivers/croissant/pom_sorter
 	url = https://github.com/frenchbakery/pom_sorter.git
