--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/pom_sorter"]
 	path = src/drivers/croissant/pom_sorter
 	url = https://github.com/frenchbakery/pom_sorter.git
+[submodule "src/drivers/navigation"]
+	path = src/drivers/navigation
+	url = https://github.com/frenchbakery/navigation.git
