--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/drivers/navigation"]
 	path = src/drivers/navigation
 	url = https://github.com/frenchbakery/navigation.git
+[submodule "include/el-std"]
+	path = include/el-std
+	url = https://github.com/melektron/el-std.git
